--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,6 @@
         {%- include google-analytics.html -%}
     {%- endif -%}
 
-    <!-- Theme Toggle Script -->
+    <!-- Theme Toggle Script (MUST be before </head>) -->
     <script src="{{ "/assets/js/theme-toggle.js" | relative_url }}" defer></script>
 </head>
